<resources>
    <string name="app_name">양산시 코로나맵</string>
    <string name="ad_mob_app_id">ca-app-pub-2713759975650849~1957307321</string>
    <string name="banner_ad_unit_id">ca-app-pub-2713759975650849/1765735635</string>
    <string name="native_advanced_ad_unit_id">ca-app-pub-2713759975650849/9478782111</string>
    <string name="native_advanced_ad_unit_test_id">ca-app-pub-3940256099942544/2247696110</string>
    <string name="ad_attribution">Ad</string>

    <string name="location_permission_grant_request_message">애플리케이션을 사용하려면 위치 권한을 부여해야합니다.</string>
    <string name="confirmed_patients">확진환자</string>
    <string name="test_result_negative">검사결과(음성)</string>
    <string name="failed_to_load_data">데이터를 불러오지 못했습니다.</string>
    <string name="under_inspection">검사중</string>
    <string name="application_logo">Application Logo</string>
    <string name="open_source_license">오픈소스 라이선스</string>
    <string name="display_polyline">연결선 표시</string>
    <string name="display_circles">범위 표시</string>
    <string name="donation">후원하기</string>
    <string name="options">옵션</string>
    <string name="disinfection">Disinfection</string>
    <string name="exit">종료</string>
    <string name="update">업데이트</string>
    <string name="later">나중에</string>
    <string name="splash_image">Splash image</string>
    <string name="ok">확인</string>
    <string name="write_review">리뷰 쓰기</string>
    <string name="exit_message">앱을 종료하시겠습니까?</string>
    <string name="map_type">지도 타입</string>
    <string name="dropdown_arrow">Dropdown arrow</string>
    <string name="make_a_call">전화 걸기</string>
    <string name="donate">후원하기</string>
    <string name="open_source_licenses">오픈소스 라이선스</string>
    <string name="android">안드로이드</string>
    <string name="icon">Icon</string>
</resources>