<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:ads="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@color/colorDefaultBackground"
    android:gravity="center_horizontal">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:background="@color/colorDonationActivityDefaultBackground">

        <TextView
            android:id="@+id/text_view_title"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:padding="16dp"
            android:text="@string/exit_message"
            android:textSize="16sp"
            ads:layout_constraintEnd_toEndOf="parent"
            ads:layout_constraintStart_toStartOf="parent"
            ads:layout_constraintTop_toTopOf="parent" />

        <FrameLayout
            android:id="@+id/ad_frame"
            android:layout_width="@dimen/ad_frame_width"
            android:layout_height="wrap_content"
            ads:layout_constraintEnd_toEndOf="parent"
            ads:layout_constraintStart_toStartOf="parent"
            ads:layout_constraintTop_toBottomOf="@+id/text_view_title" />

        <Button
            android:id="@+id/button_go_to_review"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_margin="8dp"
            android:background="@color/colorTeal"
            android:fontFamily="@font/font_family_nexon_lv2_gothic_bold"
            android:gravity="center"
            android:text="@string/write_review"
            android:textColor="@android:color/white"
            android:textSize="16sp"
            ads:layout_constraintBottom_toBottomOf="parent"
            ads:layout_constraintEnd_toStartOf="@+id/button_ok"
            ads:layout_constraintStart_toStartOf="parent"
            ads:layout_constraintTop_toBottomOf="@+id/ad_frame" />

        <Button
            android:id="@+id/button_ok"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_margin="8dp"
            android:background="@color/colorTeal"
            android:fontFamily="@font/font_family_nexon_lv2_gothic_bold"
            android:gravity="center"
            android:text="@string/ok"
            android:textColor="@android:color/white"
            android:textSize="16sp"
            ads:layout_constraintBottom_toBottomOf="parent"
            ads:layout_constraintEnd_toEndOf="parent"
            ads:layout_constraintStart_toEndOf="@+id/button_go_to_review"
            ads:layout_constraintTop_toBottomOf="@+id/ad_frame" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</ScrollView>