<?xml version="1.0" encoding="utf-8"?>
<androidx.drawerlayout.widget.DrawerLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/drawer_layout_activity_main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/white"
    android:orientation="vertical"
    tools:context=".MainActivity">

    <include layout="@layout/activity_main"/>

    <com.google.android.material.navigation.NavigationView
        android:id="@+id/navigation_view"
        android:layout_width="180dp"
        android:layout_height="wrap_content"
        android:layout_gravity="end"
        android:background="@drawable/rounded_corner_navigation_view">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <TextView
                android:id="@+id/text_view_open_source_licenses"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical|end"
                android:gravity="center"
                android:padding="16dp"
                android:text="@string/open_source_license"
                android:textColor="@color/colorMenuText"
                android:textSize="16sp"
                android:textStyle="bold"
                android:drawablePadding="8dp"
                android:background="?attr/selectableItemBackground"
                app:drawableStartCompat="@drawable/ic_open_source_24" />

            <TextView
                android:id="@+id/text_view_donation"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical|end"
                android:gravity="center"
                android:padding="16dp"
                android:text="@string/donation"
                android:textColor="@color/colorMenuText"
                android:textSize="16sp"
                android:textStyle="bold"
                android:drawablePadding="8dp"
                android:background="?attr/selectableItemBackground"
                app:drawableStartCompat="@drawable/ic_baseline_favorite_24" />

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_gravity="center_vertical|end">

                <TextView
                    android:id="@+id/text_view_display_polyline"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:padding="16dp"
                    android:text="@string/display_polyline"
                    android:textColor="@color/colorMenuText"
                    android:textSize="16sp"
                    android:textStyle="bold" />

                <androidx.appcompat.widget.SwitchCompat
                    android:id="@+id/switch_polyline"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:switchMinWidth="64dp"
                    android:switchPadding="16dp" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_gravity="center_vertical|end">

                <TextView
                    android:id="@+id/text_view_display_circles"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:padding="16dp"
                    android:text="@string/display_circles"
                    android:textColor="@color/colorMenuText"
                    android:textSize="16sp"
                    android:textStyle="bold" />

                <androidx.appcompat.widget.SwitchCompat
                    android:id="@+id/switch_circles"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:switchMinWidth="64dp"
                    android:switchPadding="16dp" />

            </LinearLayout>

        </LinearLayout>

    </com.google.android.material.navigation.NavigationView>

</androidx.drawerlayout.widget.DrawerLayout>